--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-window": "^1.8.11",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -44,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "@types/validator": "^13.15.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
